@startuml   Class
left to right direction
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD8E6
    ArrowColor #2E8B57
    BorderColor #2E8B57
    FontName Arial
}
skinparam note {
    BackgroundColor #F0FFFF
    FontColor #2F4F4F
    BorderColor #2F4F4F
    FontName Arial
}

class User {
  -user_id : int <<PK>>
  -username : string
  -password : string
  -email : string
  -first_name : string
  -last_name : string
  -role : string
  -registration_date : datetime
  -last_login : datetime
  -profile_picture : string
  -jcoin_balance : decimal
  +__str__() : string
  +get_absolute_url() : string
}

class Jewelry {
  -jewelry_id : int <<PK>>
  -name : string
  -description : text
  -seller_id : int <<FK>>
  -initial_price : decimal
  -preliminary_price : decimal
  -final_price : decimal
  -image_1 : string
  -image_2 : string
  -image_3 : string
  -status : string
  +__str__() : string
  +get_absolute_url() : string
}

class Auction {
  -auction_id : int <<PK>>
  -manager_id : int <<FK>>
  -staff_id : int <<FK>>
  -start_time : datetime
  -end_time : datetime
  -status : string
  +__str__() : string
  +get_absolute_url() : string
}

class Bid {
  -bid_id : int <<PK>>
  -auction_id : int <<FK>>
  -jewelry_id : int <<FK>>
  -buyer_id : int <<FK>>
  -amount : decimal
  -timestamp : datetime
  +__str__() : string
  +get_absolute_url() : string
}

class Transaction {
  -transaction_id : int <<PK>>
  -auction_id : int <<FK>>
  -buyer_id : int <<FK>>
  -seller_id : int <<FK>>
  -amount : decimal
  -fee : decimal
  -timestamp : datetime
  -status : string
  +__str__() : string
  +get_absolute_url() : string
}

class Request {
  -request_id : int <<PK>>
  -seller_id : int <<FK>>
  -jewelry_id : int <<FK>>
  -status : string
  -preliminary_price : decimal
  -final_price : decimal
  -created_at : datetime
  -updated_at : datetime
  +__str__() : string
  +get_absolute_url() : string
}

class Blog {
  -blog_id : int <<PK>>
  -title : string
  -content : text
  -author_id : int <<FK>>
  -publication_date : datetime
  +__str__() : string
  +get_absolute_url() : string
}

note left of User : - Các trường thông tin cá nhân\n- Vai trò (role)\n- Số dư JCoin\n- Các phương thức liên quan \nđến việc hiển thị và xác thực

note right of Jewelry : - Thông tin mô tả\n- Giá cả\n- Hình ảnh\n- Trạng thái

note right of Auction : - Thông tin về phiên đấu giá\n- Thời gian bắt đầu/kết thúc\n- Trạng thái

note left of Bid : - Thông tin về giá thầu\n- Liên kết với phiên đấu giá, \ntrang sức và người mua

note right of Transaction : - Thông tin về giao dịch mua bán\n- Liên kết với phiên đấu giá, \nngười mua và người bán

note right of Request : - Thông tin về yêu cầu đăng ký \ntrang sức\n- Giá cả ở các giai đoạn \n- Liên kết với người bán và trang sức

note left of Blog : - Thông tin về bài viết blog\n- Liên kết với tác giả

User "1" -- "*" Jewelry : Seller đăng ký
User "1" -- "*" Auction : Manager tạo
User "1" -- "*" Auction : Staff phụ trách
User "1" -- "*" Bid : Buyer đặt
User "1" -- "*" Transaction : Buyer thực hiện
User "1" -- "*" Transaction : Seller thực hiện
User "1" -- "*" Request : Seller tạo
User "1" -- "*" Blog : Admin viết
Auction "1" -- "*" Jewelry : ""
Auction "1" -- "*" Bid : ""
Auction "0..1" -- "1" Transaction : ""
Jewelry "1" -- "*" Bid : ""
Jewelry "1" -- "1" Request : ""

@enduml